# firmware_scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  camera_test.analysis.json  camera_test.html  camera_test.json  pyproject.toml  sbom.html  sbom.json  test_3288.analysis.json  test_3288.html  test_3288.json  test_android.analysis.json  test_android.html  test_android.json  test_camera2.analysis.json  test_camera2.html  test_camera2.json  test_miwifi_r1cl.analysis.json  test_miwifi_r1cl.html  test_miwifi_r1cl.json  test_r1cl.json  vuln.html,vlun.json  vuln.json
.github/workflows/: ci.yml
data/patterns/: function_signatures.json  version_strings.json
data/signatures/: freertos.json  zephyr.json
docs/: DEVELOPMENT.md  EXTENSION_GUIDE.md  INSTALL.md  PRD.md  ROADMAP.md  TECHNICAL_PRINCIPLES.md  TEST_REPORT.md  claude-code-doc-workflow.md
logs/: scan_index.jsonl
logs/scans/: 20260602_161532_camera_8d4223.json  20260602_161655_miwifi_r1cl_firmware_82b5c_2_7_81_043b29.json  20260602_162024_android_system_094e99.json
src/firmware_scanner/: __init__.py  __main__.py
src/firmware_scanner/android/: __init__.py  axml.py  build_prop.py  erofs_reader.py  ext4_reader.py  external_tools.py  sparse.py  super_img.py  system_scanner.py  yaffs2_reader.py
src/firmware_scanner/arch/: detector.py  models.py
src/firmware_scanner/cli/: app.py  progress.py
src/firmware_scanner/core/: config.py  context.py  errors.py  log.py  pipeline.py  plugin_manager.py  scan_log.py  user_config.py
src/firmware_scanner/data/: __init__.py  emba_rules.json
src/firmware_scanner/extraction/: deep_scanner.py  emba_rules.py  enhanced.py  models.py  (+2 more)
tests/: conftest.py
tests/final_results/: test_out
tests/final_results2/: apk_F-Droid_apk_sbom.json  iot_IoTGoat_img_sbom.json  iot_openwrt-kernel_bin_sbom.json  openwrt_sbom.json  rtos_collection_zip_sbom.json  rtos_freertos_sample_bin_sbom.json  zip_FreeRTOS-LTS_zip_sbom.json
tests/final_results3/: apk_F-Droid.apk.json  iot_IoTGoat.img.json  iot_openwrt.bin.json  rtos_collection.zip.json  rtos_freertos.bin.json  rtos_threadx.bin.json  zip_FreeRTOS-LTS.zip.json
tests/fixtures/: final_sbom.json  report.html  sbom_final.json  sbom_output.json
tests/unit/: test_arch_detection.py  test_config.py  test_deep_scanner.py  test_firmware_loader.py  test_rtos_detection.py
tests/v2_results/: apk_F-Droid.apk.json  iot_openwrt.bin.json  rtos_collection.zip.json  rtos_freertos.bin.json  zip_FreeRTOS-LTS.zip.json
(+97 files in other folders)
